[gd_scene load_steps=15 format=1]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character/TILE_SET/NPC_test.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6.5896, 10 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=8]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 18.5087, 14.3816 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 10.7832, 12.7408 )

[sub_resource type="CircleShape2D" id=12]

custom_solver_bias = 0.0
radius = 10.0

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.606573, 0, 0, 0.224077, 0.117232, 8.05233 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Anime" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idledown = SubResource( 2 )
anims/idleleft = SubResource( 3 )
anims/idleright = SubResource( 4 )
anims/idleup = SubResource( 5 )
anims/walkdown = SubResource( 6 )
anims/walkleft = SubResource( 7 )
anims/walkright = SubResource( 8 )
anims/walkup = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idledown"

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 2

[node name="Area2D" type="Area2D" parent="." groups=[
"Player",
]]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="tile_effect" type="Area2D" parent="."]

transform/pos = Vector2( 0, -0.0510473 )
input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 0.349987, 0, 0, 0.157284, 0.0942812, 8.1296 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="tile_effect"]

transform/pos = Vector2( 0.0942812, 8.1296 )
transform/scale = Vector2( 0.349987, 0.157284 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.117232, 8.05233 )
transform/scale = Vector2( 0.606573, 0.224077 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Field_of_View" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 11.1051, -11.1051 )
transform/scale = Vector2( 1.34704, 1.34704 )
input/pickable = true
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 3.44975, 0, 0, 3.44975, -8.57553, 7.77479 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field_of_View"]

transform/pos = Vector2( -8.57553, 7.77479 )
transform/scale = Vector2( 3.44975, 3.44975 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_enter" from="tile_effect" to="." method="_on_tile_effect_body_enter"]

[connection signal="body_enter" from="Field_of_View" to="." method="_on_Field_of_View_body_enter"]


